% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-19 [2024-06-26]}{
  \subsection{Misc}{
    \itemize{
      \item more packages mentioned in Rd xref's
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-18 [2024-04-25]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item sessionInfoX() now also stores (and prints) \code{.Machine}
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item  \code{polyn.eval(7, x)} no longer always returns \code{7}, but
      rather a vector of the same length as \code{x}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-17 [2024-02-01]}{
  \subsection{Misc}{
    \itemize{
      \item  \code{seq_along(.)} instead of (partial arg)
      \code{seq(along=.)}; fix other partial arg.

      \item Get rid of \code{is.R()}, deprecated from \R 4.4.0.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-16 [2023-08-08]}{
  \subsection{Misc}{
    \itemize{
      \item \file{NEWS.Rd} work around "not yet done"-entries.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-15 [2023-04-18]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New \code{list_()} (from my pkg tools) to create auto-named
      \code{list()}s easily.

      \item improved \code{Sys.ps.cmd()} for macOS.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-14 [2022-11-09]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{read.org.table()} now determines a reasonable
      \code{nrows} automatically.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item \code{eaxis()} has a larger default, \code{12} instead of 10,
      for \code{nintLog}.

      \item \file{man/*.Rd}: remove some extraneous \code{\\}.
