@@ -7,7 +7,13 @@
 %%% TODO:
       %% \item New \code{rDatetime()} for random date/time sequences
       %% within a specified time range.
-\section{CHANGES in sfsmisc VERSION 1.1-19 [2024-06-26]}{
+\section{CHANGES in sfsmisc VERSION 1.1-19 [2024-08-16]}{
+  \subsection{NEW FEATURES}{
+    \itemize{
+      \item pretty10exp() gets new offset arg \code{} and now works
+      correctly even for subnormal numbers.
+    }
+  }
   \subsection{Misc}{
     \itemize{
       \item more packages mentioned in Rd xref's
